feat(api-models): add domain models, DTOs, and security guidance

--- a/Backend/StudioFlow.API/appsettings.Development.json
+++ b/Backend/StudioFlow.API/appsettings.Development.json
@@ -8,6 +8,9 @@
     "Audience": "StudioFlow.Client.Dev",
     "ExpirationMinutes": 60
   },
+  "Security": {
+    "SecretsPolicy": "Development file is tracked. Keep placeholders only; inject real secrets from env or user-secrets."
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
