--- a/Backend/StudioFlow.API/appsettings.json
+++ b/Backend/StudioFlow.API/appsettings.json
@@ -8,6 +8,9 @@
     "Audience": "StudioFlow.Client",
     "ExpirationMinutes": 60
   },
+  "Security": {
+    "SecretsPolicy": "Do NOT commit real SecretKey, API tokens, or database passwords. Use environment variables/secret manager."
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
