docs(security): add explicit fictional-data disclaimers across backend
What:
- Added clear demo/test-only disclaimers for seeded data and config placeholders
- Marked seed users and password hashes as fictional development data
- Added standalone DATA_DISCLAIMER.md for repository reviewers

Where:
- Backend/StudioFlow.API/Data/AppDbContext.cs
- Backend/StudioFlow.API/SECURITY.md
- Backend/StudioFlow.API/.env.example
- Backend/StudioFlow.API/appsettings.json
- Backend/StudioFlow.API/appsettings.Development.json
- Backend/StudioFlow.API/DATA_DISCLAIMER.md

Why:
- Make it explicit that repository data is non-production and fictional

--- a/Backend/StudioFlow.API/.env.example
+++ b/Backend/StudioFlow.API/.env.example
@@ -1,5 +1,7 @@
 # StudioFlow API secret configuration (example values only)
 # Copy to .env.local (or set in OS environment), never commit real values.
+# All values in this file are placeholders for development/testing only.
+# No value here represents production or real customer data.
 
 Jwt__SecretKey=replace-with-strong-secret-min-32-chars
 Jwt__Issuer=StudioFlow
