--- a/Backend/StudioFlow.API/appsettings.Development.json
+++ b/Backend/StudioFlow.API/appsettings.Development.json
@@ -9,7 +9,8 @@
     "ExpirationMinutes": 60
   },
   "Security": {
-    "SecretsPolicy": "Development file is tracked. Keep placeholders only; inject real secrets from env or user-secrets."
+    "SecretsPolicy": "Development file is tracked. Keep placeholders only; inject real secrets from env or user-secrets.",
+    "DataDisclaimer": "All sample values and seeded entities in this repository are fictional and intended for development/testing only."
   },
   "Logging": {
     "LogLevel": {
