--- a/Backend/StudioFlow.API/appsettings.json
+++ b/Backend/StudioFlow.API/appsettings.json
@@ -9,7 +9,8 @@
     "ExpirationMinutes": 60
   },
   "Security": {
-    "SecretsPolicy": "Do NOT commit real SecretKey, API tokens, or database passwords. Use environment variables/secret manager."
+    "SecretsPolicy": "Do NOT commit real SecretKey, API tokens, or database passwords. Use environment variables/secret manager.",
+    "DataDisclaimer": "All sample values and seeded entities in this repository are fictional and intended for development/testing only."
   },
   "Logging": {
     "LogLevel": {
